--- a/style.css
+++ b/style.css
@@ -1,258 +1,903 @@
-nav{
-    background-color: hsl(115, 40%, 55%);
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-body{
-    background-color: #fff7f7;
+.topnav {
+  overflow: hidden;
+  background-color: rgb(255, 255, 255);
+  position: relative;
+  top: 0;
+  position: fixed;
+  width: 100%;
+  z-index: 10;
 }
 
-.container-fluid{
-    padding: 15px 10px 15px 150px;
-    background-color: rgb(255, 255, 255);
-    width: 75%;
-    margin-left: -20px;
+.topnav a {
+  float: left;
+  display: block;
+  color: #000000;
+  text-align: center;
+  padding: 20px 16px;
+  margin: 10px 0 -10px 0;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav .icon {
+  display: none;
+  margin-right: 50px;
+}
+
+.topnav button {
+  margin-top: -7px;
+}
+
+.topnav .right {
+  float: right;
+  background-color: #42a342;
+  padding: 0 20px 10px 100px;
+
+}
+
+.topnav .slice {
+  background-color: #ffffff;
+  z-index: 7;
+  margin-left: 40px;
+}
+
+@media screen and (max-width: 400px) {
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+
+  .img-top {
+    min-width: 1000px;
+  }
+
+  .slick-slide h2 {
+    font-size: 20px;
+  }
+
+  .topnav {
+    width: 400px;
+    margin-left: -40px;
+    padding-right: 370px;
+  }
+}
+
+
+@media screen and (max-width: 400px) {
+  .topnav.responsive {
+    position: relative;
+  }
+
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin-right: 0;
+  }
+
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+  .topnav.responsive {
+    width: 400px;
+    margin-left: -40px;
+    padding-right: 400px;
+  }
+
+
+  .topnav.responsive .right {
+    position: relative;
+    margin-left: -50px;
+  }
+
+  .right .btn {
+    padding: 0 10px;
+  }
+}
+
+@media screen and (max-width: 830px) {
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+
+  .topnav .right {
     float: left;
-      -webkit-clip-path: polygon(0 0,0 0,100% 0,100% 0,100% calc(100% - 100px),calc(100% - 100px) 100%,100px 100%,0 100%);
-    clip-path: polygon(0 0,0 0,100% 0,100% 0,100% calc(100% - 100px),calc(100% - 100px) 100%,100px 100%,0 100%);
+    margin-left: 265px;
+    background-color: white;
+    display: none;
+  }
+
+  /* .topnav{
+    width: 820px;
+  } */
+
 }
 
-.nav-item{
-    margin-left: 30px;
-    font-size: 18px;
-    font-weight: 600;
+@media screen and (max-width: 830px) {
+  .topnav.responsive {
+    position: fixed;
+    width: 100%;
+
+  }
+
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .topnav.responsive a {
+    float: none;
+    display: block;
+  }
+
+  .topnav.responsive .right {
+    display: block;
+  }
+
 }
 
-.d-flex button{
-    margin-right: 50px;
-    margin-left: 40px;
-    background-color: aliceblue;
-    border-radius: 10px;
-    font-size: 18px;
-    font-weight: 600;
-    padding: 8px 20px 8px 20px;
-}
 
-.d-flex a{
-    margin: 10px 10px 0 0;
-    font-size: 18px;
-    font-weight: 600;
-    text-decoration: none;
-}
 
 /* slide */
 .slideshow-container {
-    position: relative;
-    background: transparent;
-    color: white;
-    font-weight: 600;
-    font-size: 60px;
-    margin: 60px 40px 0 40px;
-  }
-  .author {
-    font-size: 24px;
-    margin: -10px 0 0 0;
+  position: relative;
+  background: transparent;
+  color: white;
+  font-weight: 600;
+  font-size: 60px;
+  margin: 130px 40px 0 40px;
+  width: 80%;
+  padding: 0 0 50px 0;
 }
-  
-  /* Slides */
-  .mySlides {
-    display: none;
-    padding: 80px;
+
+
+#content1 button {
+  margin: -15px 0 0 80px;
+  font-weight: bold;
+  padding: 8px 20px 8px 20px;
+}
+
+.slider .slick-slide {
+  padding: 100px 0 0 0;
+  margin: -10px 50px 0 50px;
+}
+
+.slider .slick-slide h2 {
+  font-size: 48px;
+  font-weight: 600;
+}
+
+.slider .slick-slide p {
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.slick-next {
+  position: absolute;
+  margin-top: 400px;
+}
+
+/* content1 2 */
+
+@media screen and (max-width: 400px) {
+
+  #content1 button {
+    margin-left: 0;
   }
 
-  #content1 button{
-    position: relative;
-    margin: -150px 0 0 80px;
-    font-weight: bold;
-    padding: 8px 20px 8px 20px;
-  }
-
-/* content2 */
-  #content2 .contain{
-    position: relative;
-    background-color: #fff7f7;
-    margin: 70px 0 0 0;
-    padding: 140px 100px 200px 100px ;
-  }
-
-  * {
-    box-sizing: border-box;
-  }
-  
   .column1 {
-    float: left;
-    width: 45%;
-    padding: 10px;
-    height: 300px;
+    margin-top: 600px;
+    margin-left: 130px;
+    float: none;
+    padding: auto;
+    width: 400px;
+  }
+
+  .column1 img {
+    width: 350px;
+    margin-top: 330px;
+    margin-left: -20px;
+  }
+
+  .slider .slick-slide h2 {
+    font-size: 38px;
+    font-weight: 600;
+    width: 400px;
+    margin-left: -50px;
+    padding-right: 100px;
+
+  }
+
+  .slider .slick-slide p {
+    font-size: 16px;
+    font-weight: 400;
+    width: 100%;
+    margin-left: -50px;
+    width: 300px;
   }
 
   .column2 {
+    width: 500px;
+    padding-left: 200px;
+    float: left;
+    height: auto;
+    padding-bottom: 100px;
+  }
+
+  .row {
+    width: 260%;
+    margin-left: -300px;
+    margin-top: -200px;
+  }
+
+  #content2 {
+    margin-left: -60px;
+    height: 400px;
+    width: 140%;
+    font-size: 20px;
+  }
+
+  .grid {
+    column-gap: 60px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 830px) {
+
+  .topnav {
+    width: 820px;
+  }
+
+  .column1 {
+    margin-top: 350px;
+    margin-left: 110px;
+    float: none;
+    padding: auto;
+    position: absolute;
+  }
+
+  .column1 img {
+    width: 450px;
+  }
+
+  .column2 {
+    width: 100%;
+    float: left;
+    height: auto;
+  }
+
+  .column2 h2 {
+    font-size: 30px;
+  }
+
+  .row {
+    width: 230%;
+    margin-left: -120px;
+    margin-top: -100px;
+  }
+
+  .grid {
+    column-gap: 60px;
+  }
+
+}
+
+#content2 .contain {
+  position: relative;
+  background-color: #fff7f7;
+  margin: 130px 0 0 0;
+  padding: 140px 100px 200px 100px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.column1 {
+  float: left;
+  width: 45%;
+  padding: 10px;
+  height: 300px;
+}
+
+.column1 img {
+  width: 330px;
+  height: 200px;
+}
+
+.column2 {
+  float: left;
+  width: 45%;
+  padding: 10px;
+  height: 300px;
+  margin-left: 100px;
+  margin-top: -20px;
+  color: rgb(73, 73, 73);
+}
+
+.column2 h2 {
+  font-size: 42px;
+}
+
+.column2 p {
+  font-size: 17px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.grid {
+  display: flex;
+  text-align: center;
+}
+
+.A {
+  margin: 5px;
+}
+
+.A span {
+  font-size: 30px;
+}
+
+/* content3 */
+@media screen and (max-width: 400px) {
+  #content3 .contain h2 {
+    padding-top: 280px;
+    margin-left: 50px;
+  }
+
+  #content3 .contain {
+    margin-left: -50px;
+  }
+
+  .grid-card {
+    row-gap: 20px;
+    padding-bottom: 1000px;
+  }
+
+  .grid-card .card {
+    height: 350px;
+  }
+}
+
+@media screen and (max-width: 830px) {
+
+  #content3 {
+    margin-top: 350px;
+    margin-bottom: 400px;
+  }
+
+  .grid-card {
+    width: 90%;
+    height: 430px;
+    padding-left: 90px;
+    row-gap: 20px;
+  }
+
+  .card .card-img-top {
+    width: 70px;
+  }
+
+  .card {
+    font-size: 16px;
+    height: 350px;
+  }
+
+}
+
+#content3 {
+  color: rgb(73, 73, 73);
+
+}
+
+#content3 .contain h2 {
+  font-size: 42px;
+  text-align: center;
+  font-weight: 600;
+  margin-bottom: 30px;
+}
+
+.grid-card {
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 30px;
+  font-size: 18px;
+  margin: 0 0 20px 0;
+}
+
+.card {
+  text-align: center;
+  place-items: center;
+  padding: 50px 30px 50px 30px;
+  border-radius: 20px;
+  box-shadow: 0 0 10px 0 grey;
+}
+
+/* content4 */
+
+@media screen and (max-width: 400px) {
+  #content4 .gambarmobile {
+    position: absolute;
+    padding-left: 350px;
+  }
+
+  #content4 {
+    height: 700px;
+    width: 85%;
+    display: flex;
+    padding: 0;
+    margin-right: -100px;
+  }
+
+  #content4 .contain {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -350px;
+  }
+
+  #content4 .contain .text {
+    width: 300px;
+    height: 300px;
+    padding: 250px 60px 0 20px;
+    position: absolute;
+    margin-left: -200px;
+    color: #ffffff;
+  }
+
+
+}
+
+@media screen and (max-width: 830px) {
+  #content4 img {
+    margin: 100px 0 0 100px;
+    position: absolute;
+  }
+
+  #content4 .contain .text {
+    width: 100%;
+  }
+
+}
+
+#content4 {
+  margin: 200px 20px 60px 20px;
+  background-image: linear-gradient(to right, #219380, #6dd5ed);
+  padding: 100px 50px 100px 50px;
+  border-radius: 20px;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+  margin-bottom: 100px;
+}
+
+#content4 .contain {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#content4 .contain .text {
+
+  margin: 0 0 0 300px;
+}
+
+.shapes {
+  padding: 250px;
+  background-color: #7ee7ff;
+  border-radius: 100px;
+  position: absolute;
+  z-index: 0;
+  margin-left: -250px;
+  rotate: 40deg;
+  opacity: 0.3;
+}
+
+@media screen and (max-width: 400px) {
+  .shapes {
+    display: none;
+  }
+
+  .content4_part1 .contain .text1 {
+    padding: 10px;
+    height: 100px;
+    margin-top: -200px;
+    margin-left: -30px;
+    position: absolute;
+    margin-right: 20px;
+  }
+
+  .content4_part1 .contain .text1 p {
+    font-size: 30px;
+    font-weight: 400;
+    padding: 10px;
+    width: 360px;
+    height: 100px;
+  }
+
+
+  .content4_part1 {
+    margin-left: -60px;
+    margin-top: 150px;
+  }
+
+
+
+}
+
+@media screen and (max-width: 830px) {
+  .content4_part1 .contain .text1 {
+    font-size: 45px;
+    font-weight: 600;
     float: left;
     width: 45%;
     padding: 10px;
     height: 300px;
-    margin-left: 100px; 
-    margin-top: -20px;
-    color: rgb(73, 73, 73);
+  }
+}
+
+.content4_part1 {
+  padding: 100px 0 200px 100px;
+}
+
+.content4_part1 .contain .text1 {
+  font-size: 45px;
+  font-weight: 600;
+  float: left;
+  width: 45%;
+  padding: 10px;
+  height: 300px;
+}
+
+.content4_part1 .contain .multiple-items {
+  overflow: hidden;
+  filter: brightness(80%);
+}
+
+.multiple-items .slick-slide {
+  margin-top: 10px;
+  width: 60%;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 400px) {
+  .content4_part2 .contain .multiple-item {
+    padding-left: 5px;
+    padding-right: 70px;
   }
 
-  .column2 h2{
-    font-size: 42px;
+  .content4_part2 {
+    margin-left: -80px;
+    margin-top: -100px;
   }
 
-  .column2 p{
-    font-size: 17px;
-  }
-
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-
-  @media screen and (max-width: 600px) {
-    .column {
-      width: 100%;
-    }
-  }
-
-  .grid{
-    display: flex;
-    text-align: center;
-  }
-
-  .A{
-    margin: 5px;
-  }
-
-  .A span{
-    font-size: 30px;
-  }
-
-  /* content3 */
-  #content3{
-    color: rgb(73, 73, 73);
-
-  }
-
-    #content3  .contain h2{
-    font-size: 42px;
-    text-align: center;
+  .content4_part2 .contain .text {
+    font-size: 45px;
     font-weight: 600;
-    margin-bottom: 30px;
+    padding-left: 60px;
   }
 
-  .grid-card{
-    justify-content: center;
-    display: flex;
-    column-gap: 30px;
-    font-size: 18px;
-    margin: 0 0 20px 0;
+
+
+}
+
+
+@media screen and (max-width: 830px) {
+  .content4_part2 .contain .multiple-item {
+    width: 60%;
+    overflow: hidden;
+    margin-left: -100px;
   }
 
-  .card{
+  .content4_part2 .contain {
+    margin-left: -100px;
     text-align: center;
-    place-items: center;
-    padding: 50px 30px 50px 30px;
-    border-radius: 20px;
-    box-shadow: 0 0 10px 0 grey;
+    place-content: center;
   }
 
-  /* content4 */
-
-  #content4{
-    margin: 200px 100px 60px 100px;
-    background-image: linear-gradient(to right, #219380 , #6dd5ed);
-    padding: 100px 50px 100px 50px;
-    border-radius: 20px;
-    font-weight: bold;
-    color: rgb(255, 255, 255);
-    margin-bottom: 100px;
+  .content4_part2 .contain .text {
+    font-size: 45px;
+    font-weight: 600;
+    margin-left: 100px;
   }
 
-  #content4 .contain{
+  .slick-list .con img {
+    margin-right: 50px;
+  }
+
+}
+
+.content4_part2 {
+  padding: 100px 0 200px 0;
+}
+
+.content4_part2 .contain {
+  text-align: center;
+}
+
+.content4_part2 .contain .text {
+  font-size: 45px;
+  font-weight: 600;
+}
+
+.content4_part2 .contain .multiple-item {
+  width: 70%;
+  overflow: hidden;
+  margin-left: 200px;
+}
+
+.multiple-item .con {
+  place-items: center;
+}
+
+
+@media screen and (max-width: 400px) {
+  .content4_part3 {
+    padding-top: -80px;
+    margin-top: -100px;
+  }
+
+}
+
+.content4_part3 {
+  padding: 100px 0 150px 0;
+  z-index: 3;
+}
+
+.content4_part3 .contain {
+  text-align: center;
+}
+
+.content4_part3 .contain .text {
+  font-size: 45px;
+  font-weight: 600;
+}
+
+.content4_part3 .contain .column {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  column-gap: 50px;
+  row-gap: 20px;
+}
+
+.content4_part3 .contain .column .daftar {
+  padding: 30px;
+  border-radius: 20px;
+  background: #f7f7f7;
+  box-shadow: 20px 20px 30px #bebebe,
+    -20px -20px 30px #ffffff;
+}
+
+
+/* content5 */
+
+@media screen and (max-width: 400px) {
+  footer {
+    margin-top: 1150px;
+    margin-left: -30px;
+  }
+
+  #content5 {
+    margin: 0 0 0 -20px;
+    width: 150%;
+  }
+
+  .flex-footer {
+    padding-left: 200px;
+    margin-left: 370px;
+  }
+
+  .col-md-2 {
+    padding: 20px;
+    height: fit-content;
+    padding-bottom: 200px;
+  }
+
+  .col-md-3 {
+    padding-top: 20px;
+    padding-left: 20px;
+    height: fit-content;
+  }
+
+  .col-md-3.sesi {
+    padding-top: 250px;
+    height: fit-content;
+    position: absolute;
+    margin-right: 980px;
+  }
+
+  small {}
+
+  iframe {
+    margin-top: 300px;
+    padding-top: 50px;
+    padding-bottom: -40px;
+    max-width: 300px;
+    margin-left: -200px;
+    height: 420px;
+  }
+
+  .footer-14398 .row {
+    padding-top: 100px;
+    margin-left: 20px;
+    width: 350px;
+  }
+
+
+}
+
+@media screen and (max-width: 830px) {
+  footer {
+    margin-top: 1200px;
+  }
+
+  iframe {
+    margin-top: 350px;
+    width: 600px;
+    margin-left: -100px;
+    height: 400px;
+  }
+
+  .footer-14398 .row {
+    flex-wrap: wrap;
     display: flex;
+    padding-top: 100px;
+    margin-left: 40px;
+
   }
 
-  #content4 .contain .text{
-    width: 55%;
-    margin: 0 0 0 300px;
+  .col-md-2 {
+    margin-top: 200px;
+    margin-left: -1150px;
+    margin-top: -10px;
   }
 
-  /* content5 */
-
-  #content5{
-    margin: 0 50px 200px 80px;
+  .flex-footer {
+    padding-left: -300px;
   }
 
-  .footer{
-    margin-top: 750px;
+  .col-md-3 {
+    margin-top: -10px;
+    margin-right: -200px;
+    margin-left: -60px;
   }
 
-  .col1 {
-    float: left;
-    width: 55%;
-    padding: 10px;
-    height: 300px;
+  .col-md-3.sesi {
+    margin-left: 30px;
+    width: 200px;
+    margin-top: -10px;
   }
 
-  .col2 {
-    float: left;
-    width: 35%;
-    padding: 10px;
-    height: 300px;
-    margin-left: 100px; 
-    margin-top: -20px;
-    color: rgb(73, 73, 73);
-    text-align: right;
+  small {
+    margin-left: -1100px;
   }
 
+}
+
+#content5 {
+  margin: 0 50px 200px 40px;
+}
+
+.footer {
+  margin-top: 750px;
+}
+
+.col1 {
+  float: left;
+  width: 55%;
+  padding: 10px;
+  height: 300px;
+}
+
+.col2 {
+  float: left;
+  width: 35%;
+  padding: 10px;
+  height: 300px;
+  margin-left: 100px;
+  margin-top: -20px;
+  color: rgb(73, 73, 73);
+  text-align: right;
+}
 
 
 
+/* footer */
 
+.flex-footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  column-gap: 40px;
+  margin-top: 20px;
+}
 
+.footer-14398 {
+  padding: 5rem 0;
+  background: rgb(0, 0, 0);
+  color: #777;
+}
 
+.footer-14398 .footer-site-logo {
+  color: #fff;
+  font-size: 26px;
+  font-weight: bold;
+  margin-bottom: 30px;
+  display: block;
+}
 
+.footer-14398 h3 {
+  color: #fff;
+  font-size: 16px;
+  margin-bottom: 20px;
+}
 
-  .footer-14398 {
-    padding: 5rem 0;
-    background: rgb(0, 0, 0);
-    color: #777; }
-    .footer-14398 .footer-site-logo {
-      color: #fff;
-      font-size: 26px;
-      font-weight: bold;
-      margin-bottom: 30px;
-      display: block; }
-    .footer-14398 h3 {
-      color: #fff;
-      font-size: 16px;
-      margin-bottom: 20px; }
-    .footer-14398 .links li {
-      margin-bottom: 10px; }
-      .footer-14398 .links li a {
-        color: #999; }
-        .footer-14398 .links li a:hover {
-          color: #fff; }
-    .footer-14398 .link-menu li {
-      display: inline-block; }
-      .footer-14398 .link-menu li a {
-        color: #fff;
-        display: inline-block;
-        padding: 10px; }
-    .footer-14398 .link-menu.nav-left li:first-child a {
-      padding-left: 0; }
-    .footer-14398 .link-menu.nav-right li:last-child a {
-      padding-left: 0; }
-    .footer-14398 .social li {
-      display: inline-block; }
-      .footer-14398 .social li a {
-        display: inline-block;
-        padding: 10px;
-        color: #ccc; }
-      .footer-14398 .social li:last-child a {
-        padding-right: 0; }
-    .footer-14398 .line {
-      border-top: 1px solid rgba(255, 255, 255, 0.2); }
-  
-  
+.footer-14398 .links li {
+  margin-bottom: 10px;
+}
+
+.footer-14398 .links li a {
+  color: #999;
+}
+
+.footer-14398 .links li a:hover {
+  color: #fff;
+}
+
+.footer-14398 .link-menu li {
+  display: inline-block;
+}
+
+.footer-14398 .link-menu li a {
+  color: #fff;
+  display: inline-block;
+  padding: 10px;
+}
+
+.footer-14398 .link-menu.nav-left li:first-child a {
+  padding-left: 0;
+}
+
+.footer-14398 .link-menu.nav-right li:last-child a {
+  padding-left: 0;
+}
+
+.footer-14398 .social li {
+  display: inline-block;
+}
+
+.footer-14398 .social li a {
+  display: inline-block;
+  padding: 10px;
+  color: #ccc;
+}
+
+.footer-14398 .social li:last-child a {
+  padding-right: 0;
+}
+
+.footer-14398 .line {
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+}
